[gd_scene load_steps=16 format=3 uid="uid://c16aelv8g37ck"]

[ext_resource type="Script" path="res://shared/sophie_character_controller/sophie_character_controller.gd" id="1_rvo1c"]
[ext_resource type="AudioStream" uid="uid://bx0t7f2nuk2lr" path="res://shared/sophie_character_controller/Sounds/03_Step_grass_03.wav" id="2_0k6pv"]
[ext_resource type="Script" path="res://shared/sophie_character_controller/camera_controller.gd" id="3_qrkly"]
[ext_resource type="PackedScene" uid="uid://dgvq4io2wgwv" path="res://shared/models/sophia/sophia_skin.tscn" id="4_i7dnh"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4it54"]
height = 1.6

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_0gixm"]
length = 0.3

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_gqx4v"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_s5n07"]

[sub_resource type="Gradient" id="Gradient_4qby2"]
colors = PackedColorArray(1, 1, 1, 1, 0.991164, 0.991164, 0.991164, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ahyk3"]
gradient = SubResource("Gradient_4qby2")

[sub_resource type="Curve" id="Curve_o6s0e"]
_data = [Vector2(0, 0.418182), 0.0, 0.816529, 0, 0, Vector2(1, 1), 0.606652, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_tigny"]
curve = SubResource("Curve_o6s0e")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ws674"]
direction = Vector3(0, 1, 0)
gravity = Vector3(0, 2, 0)
initial_velocity_min = 1.0
initial_velocity_max = 1.0
scale_min = 2.0
scale_max = 2.0
scale_curve = SubResource("CurveTexture_tigny")
color_ramp = SubResource("GradientTexture1D_ahyk3")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x5x50"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(0.917647, 0.917647, 0.917647, 1)
disable_receive_shadows = true
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_c5lqg"]
material = SubResource("StandardMaterial3D_x5x50")
size = Vector2(0.3, 0.3)

[node name="SophieCharacterController" type="CharacterBody3D" groups=["player"]]
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
floor_constant_speed = true
floor_block_on_wall = false
floor_snap_length = 0.2
script = ExtResource("1_rvo1c")

[node name="StepSounds" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_0k6pv")

[node name="CapsuleCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0)
shape = SubResource("CapsuleShape3D_4it54")

[node name="RayCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.3, 0)
shape = SubResource("SeparationRayShape3D_0gixm")

[node name="CameraController" type="Node3D" parent="."]
unique_name_in_owner = true
top_level = true
script = ExtResource("3_qrkly")
invert_mouse_y = true

[node name="CameraSpringArm" type="SpringArm3D" parent="CameraController"]
transform = Transform3D(-1, -5.15034e-15, -8.74228e-08, -3.23484e-08, 0.929023, 0.370022, 8.12178e-08, 0.370022, -0.929023, 0, 1.87087, 0)
collision_mask = 0
shape = SubResource("SeparationRayShape3D_gqx4v")
spring_length = 16.0

[node name="CameraThirdPersonPivot" type="Marker3D" parent="CameraController/CameraSpringArm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)

[node name="PlayerCamera" type="Camera3D" parent="CameraController"]
transform = Transform3D(-1, -3.71248e-14, -8.74228e-08, -3.23484e-08, 0.929023, 0.370022, 8.12178e-08, 0.370022, -0.929023, -1.39876e-06, 8.26019, -14.8644)
top_level = true
current = true
fov = 35.0

[node name="CameraRayCast" type="RayCast3D" parent="CameraController/PlayerCamera"]
transform = Transform3D(1, 0, -7.10543e-15, 0, 1, 0, 0, 0, 1, 0, 0, 0)
target_position = Vector3(0, 0, -100)
collision_mask = 2
debug_shape_custom_color = Color(0, 0, 0, 0)

[node name="GroundShapeCast" type="ShapeCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.978282, 0)
shape = SubResource("CylinderShape3D_s5n07")
target_position = Vector3(0, -2.4, 0)
max_results = 1
debug_shape_custom_color = Color(0.658824, 1, 0, 1)

[node name="CharacterRotationRoot" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="CharacterSkin" parent="CharacterRotationRoot" instance=ExtResource("4_i7dnh")]
unique_name_in_owner = true
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0)

[node name="FloorSlideParticles" type="GPUParticles3D" parent="."]
unique_name_in_owner = true
cast_shadow = 0
emitting = false
amount = 2
lifetime = 0.3
process_material = SubResource("ParticleProcessMaterial_ws674")
draw_pass_1 = SubResource("QuadMesh_c5lqg")
